--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
   <script src="script.js"></script>
 </body>
   <header>
-  <img src="5" alt="Mi logo" class="logo">
+  <img src="5.png" alt="Mi logo" class="logo">
   <h1>Bienvenido a mi página web</h1>
 </header>
 
 </html>
+
 
