--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>🌐 Mi Web Profesional</h1>
+    <h1> Inversiones XTL invierte en tu futuro </h1>
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
@@ -19,8 +19,8 @@
   </header>
 
   <section id="inicio" class="hero">
-    <h2>Bienvenido a mi sitio</h2>
-    <p>Tu espacio digital para aprender, crear y crecer.</p>
+    <h2>Bienvenido futuros inversionistas</h2>
+    <p>Tu espacio para aprender a generar dinero y crecer financiera mente .</p>
     <button id="boton-info">Saber más</button>
   </section>
 
@@ -28,32 +28,34 @@
     <h2>Servicios</h2>
     <div class="card-container">
       <div class="card">
-        <h3>Diseño Web</h3>
-        <p>Creación de páginas modernas, rápidas y seguras.</p>
+        <h3>Experiencias de inversores </h3>
+        <p> Historias de pequeños inversores que cambairon su mundo.</p>
       </div>
       <div class="card">
-        <h3>Marketing Digital</h3>
-        <p>Impulsa tu presencia en redes y motores de búsqueda.</p>
+        <h3>GANANCIAS MENSUALES POR PORCENTAJE </h3>
+        <p>Impulsa tus gfanacias  en redes y motores para tu trabajo desde casa .</p>
       </div>
       <div class="card">
         <h3>Consultoría</h3>
-        <p>Asesoramiento personalizado para tu proyecto.</p>
+        <p>Asesoramiento personalizado para tu proyecto de inversionista con nosotros .</p>
       </div>
     </div>
   </section>
 
   <footer id="contacto">
-    <p>📧 Contáctame: ejemplo@email.com</p>
-    <p>&copy; 2025 Mi Web Profesional</p>
+    <p>📧 Contáctame: MAIKOLLOANO84@GMIL.COM</p>
+    <p>&copy; 1965 Mi Web Profesional</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
   <header>
   <img src="5.png" alt="Mi logo" class="logo">
-  <h1>Bienvenido a mi página web</h1>
+  <h1>Bienvenido a XTL CreatIA </h1>
 </header>
+<button class="boton-disenoweb">Diseño web</button>
 
 </html>
+
 
 
