--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
     <p>Tu espacio para aprender a generar dinero y crecer financiera mente .</p>
     <button id="boton-info">Saber más</button>
   </section>
+  <section class="registro">
+  <h2>Crear una cuenta</h2>
+  <form id="form-registro">
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre" required>
+
+    <label for="email">Correo electrónico:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password" name="password" required>
+
+    <button type="submit">Registrarme</button>
+  </form>
+  <p id="mensaje"></p>
+</section>
+
 
   <section id="servicios" class="services">
     <h2>Servicios</h2>
@@ -56,6 +73,7 @@
 <button class="boton-disenoweb">Diseño web</button>
 
 </html>
+
 
 
 
