--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1> Inversiones XTL invierte en tu futuro </h1>
     <nav>
       <ul>
+
+        
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#servicios">Servicios</a></li>
         <li><a href="#contacto">Contacto</a></li>
@@ -20,7 +22,7 @@
 
   <section id="inicio" class="hero">
     <h2>Bienvenido futuros inversionistas</h2>
-    <p>Tu espacio para aprender a generar dinero y crecer financiera mente .</p>
+    <p>Tu espacio para aprender a generar dinero y crecer financieramente .</p>
     <button id="boton-info">Saber más</button>
   </section>
   <section class="registro">
@@ -45,15 +47,15 @@
     <h2>Servicios</h2>
     <div class="card-container">
       <div class="card">
-        <h3>Experiencias de inversores </h3>
+        <h3>EXPERIENCIAS DE INVERSORES </h3>
         <p> Historias de pequeños inversores que cambairon su mundo.</p>
       </div>
       <div class="card">
         <h3>GANANCIAS MENSUALES POR PORCENTAJE </h3>
-        <p>Impulsa tus gfanacias  en redes y motores para tu trabajo desde casa .</p>
+        <p>Impulsa tus ganacias  en redes y motores para tu trabajo desde casa .</p>
       </div>
       <div class="card">
-        <h3>Consultoría</h3>
+        <h3>CONSULTORIA</h3>
         <p>Asesoramiento personalizado para tu proyecto de inversionista con nosotros .</p>
       </div>
     </div>
@@ -73,6 +75,7 @@
 <button class="boton-disenoweb">Diseño web</button>
 
 </html>
+
 
 
 
