--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul>
 
         
-        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#inicio">Inicio<black/a></li>
         <li><a href="#servicios">Servicios</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
@@ -75,6 +75,7 @@
 <button class="boton-disenoweb">Diseño web</button>
 
 </html>
+
 
 
 
