--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 </head>
 <body>
   <header>
-    <h1> Inversiones XTL invierte en tu futuro </h1>
+    <h1> Inversiones XTL  </h1>
     <nav>
       <ul>
-
-        
         <li><a href="#inicio">Inicio<black/a></li>
         <li><a href="#servicios">Servicios</a></li>
         <li><a href="#contacto">Contacto</a></li>
@@ -75,6 +73,7 @@
 <button class="boton-disenoweb">Diseño web</button>
 
 </html>
+
 
 
 
