--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1> Inversiones XTL  </h1>
     <nav>
       <ul>
-        <li><a href="#inicio">Inicio<black/a></li>
+        <li><a href="#inicio">Inicio</a></li>
         <li><a href="#servicios">Servicios</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
@@ -74,6 +74,19 @@
 
 </html>
 
+
+/* Enlaces del menú */
+ul li a {
+  color: black;          /* letra negra */
+  text-decoration: none; /* quita subrayado */
+  font-weight: bold;     /* opcional, resalta los enlaces */
+  transition: color 0.3s; /* efecto suave */
+}
+
+/* Efecto al pasar el cursor */
+ul li a:hover {
+  color: #555; /* gris oscuro al pasar el mouse */
+}
 
 
 
