--- a/index.html
+++ b/index.html
@@ -74,19 +74,16 @@
 
 </html>
 
+<ul id="menu-principal">
+  <li><a href="#inicio">Inicio</a></li>
+  <li><a href="#servicios">Servicios</a></li>
+  <li><a href="#contacto">Contacto</a></li>
+</ul>
 
 
-ul li a {
-  color: black;          /* letra negra */
-  text-decoration: none; /* quita subrayado */
-  font-weight: bold;     /* opcional, resalta los enlaces */
-  transition: color 0.3s; /* efecto suave */
-}
 
-/* Efecto al pasar el cursor */
-ul li a:hover {
-  color: #555; /* gris oscuro al pasar el mouse */
-}
+
+
 
 
 
